--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div class="gameBg"><div id="game-container"></div></div>
+    <div class="game"><div id="canvas"></div></div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="game/main.js"></script>
   </body>
