--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,11 @@
     <meta name="format-detection" content="telephone=no" />
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Cordova Phaser TypeScript Template</title>
+    <title>Phaser TypeScript Template</title>
   </head>
 
   <body>
     <div class="game"><div id="canvas"></div></div>
-    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="game/main.js"></script>
   </body>
 </html>
